[package]
name = "stake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.18.6"
borsh = { version = "1.3.1", features=["derive"] }
spl-token = { version = "4.0.1", features = [ "no-entrypoint" ]}
spl-associated-token-account = { version = "2.3.1", features = [ "no-entrypoint" ]}


[lib]
crate-type = ["cdylib", "lib"]
